--- a/Wordwise/src/App.css
+++ b/Wordwise/src/App.css
@@ -406,25 +406,25 @@ h1{
 }
 
 
-.postpage{
+.postpage .top{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 20px auto;
-    margin-bottom: 0px;
     width: 80vw;
     font-family: 'Inter', sans-serif;
 }
 
 .postpage .title{
-    font-size: 2rem;
+    font-size: 1.3rem;
     cursor: text;
 }
 
 .postpage h1{
     cursor: text;
     text-align: center;
+    margin-bottom: 0px;
 }
 
 .postpage .image{
@@ -439,18 +439,24 @@ h1{
     cursor: auto;
 }
 
+.postpage .content{
+    width:90vw;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
 .postpage .content h1{
-    font-size: 3rem;
-    text-align: center;
+    font-size: 1.9rem;
+    text-align: left;
 }
 
 .postpage .content h2{
-    font-size: 2.5rem;
-    text-align: center;
+    font-size: 1.4rem;
+    text-align: left;
 }
 
 .postpage .content p{
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 .postpage-load{
